--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.concatenate([np.matrix(np.ones(10)), X.T])"
+    "X = np.concatenate([np.matrix(np.ones(m)), X.T])"
    ]
   },
   {
